--- a/ShopManagement/Views/Order/ViewOrders.cshtml
+++ b/ShopManagement/Views/Order/ViewOrders.cshtml
@@ -73,15 +73,15 @@
                                             </th>
                                             <td>
                                                 <div class="chocolat-parent">
-                                                    <a href="@item.Image" data-id="@item.Id" class="chocolat-image SelectedOrderImageExpand" title="Just an example">
-                                                        <img alt="image" src="@item.Image" data-id="@item.Id" class="img-fluid UserImage SelectedOrderImage">
+                                                    <a href="@item.Image2" data-id="@item.Id" class="chocolat-image SelectedOrderImageExpand" title="Just an example">
+                                                        <img alt="image" src="@item.Image2" data-id="@item.Id" class="img-fluid UserImage SelectedOrderImage">
                                                     </a>
                                                 </div>
                                             </td>
                                             <td>
                                                 <div class="chocolat-parent">
-                                                    <a href="@item.Image" data-id="@item.Id" class="chocolat-image SelectedOrderImageExpand" title="Just an example">
-                                                        <img alt="image" src="@item.Image" data-id="@item.Id" class="img-fluid UserImage SelectedOrderImage">
+                                                    <a href="@item.Image3" data-id="@item.Id" class="chocolat-image SelectedOrderImageExpand" title="Just an example">
+                                                        <img alt="image" src="@item.Image3" data-id="@item.Id" class="img-fluid UserImage SelectedOrderImage">
                                                     </a>
                                                 </div>
                                             </td>
@@ -92,8 +92,8 @@
                                             <td>@item.DaysRemaining</td>
                                             <td>@item.ShopName</td>
                                             <td>@item.Amount</td>
-                                            <td>@item.Amount</td>
-                                            <td>@item.Amount</td>
+                                            <td>@item.PaidAmount</td>
+                                            <td>@item.BalanceAmount</td>
                                             <td>
                                                 <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-eye ViewOrderInfo" data-id="@item.Id"></i></a>
                                                 <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-edit EditOrderInfo" data-id="@item.Id"></i></a>
@@ -393,8 +393,24 @@
                             <input type="number" class="form-control" id="OrderAmount">
                         </div>
                         <div class="form-group">
+                            <label>Paid Amount</label>
+                            <input type="number" class="form-control" id="PaidAmount">
+                        </div>
+                        <div class="form-group">
+                            <label>Balance Amount</label>
+                            <input type="number" class="form-control" id="BalanceAmount" readonly>
+                        </div>
+                        <div class="form-group">
                             <label>Image</label>
                             <input type="file" class="form-control" style="padding:.375rem .75rem;" id="OrderImage">
+                        </div>
+                        <div class="form-group">
+                            <label>Image</label>
+                            <input type="file" class="form-control" style="padding:.375rem .75rem;" id="OrderImage2">
+                        </div>
+                        <div class="form-group">
+                            <label>Image</label>
+                            <input type="file" class="form-control" style="padding:.375rem .75rem;" id="OrderImage3">
                         </div>
                         <div class="form-group">
                             <label>Notes</label>
