--- a/ShopManagement/Views/Shop/ViewAllShops.cshtml
+++ b/ShopManagement/Views/Shop/ViewAllShops.cshtml
@@ -191,7 +191,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title"><span class="ShopOwnerName">UserName</span> - Info</h5>
+                <h5 class="modal-title">Managers Info</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
